// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> with initial props 1`] = `
.c1 {
  display: block;
  -webkit-text-align: left;
  text-align: left;
  padding: 20px;
  box-shadow: 0 2px 40px 0;
}

@media (min-width:0px) and (max-width:568px) {
  .c0 {
    left: 0 !important;
    right: 0 !important;
  }
}

<Popover
  render={[Function]}
>
  <div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      onClick={[Function]}
    >
      Toggle
    </button>
    <PopoverTransition
      shown={false}
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <StyledCSSTransition
        active={false}
        activeStyle={
          Object {
            "opacity": 1,
            "transform": "translateY(0)",
          }
        }
        defaultStyle={
          Object {
            "display": "none",
            "opacity": 0,
            "transform": "translateY(15px)",
          }
        }
        enterInitStyle={
          Object {
            "display": "inline-block",
            "opacity": 0,
            "transform": "translateY(15px)",
          }
        }
        enterStyle={
          Object {
            "opacity": Array [
              1,
            ],
            "transform": Array [
              "translateY(0)",
            ],
          }
        }
        leaveStyle={
          Object {
            "opacity": Array [
              0,
            ],
            "transform": Array [
              "translateY(15px)",
            ],
          }
        }
        style={
          Object {
            "left": 0,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <CSSTransition
          active={false}
          activeStyle={
            Object {
              "opacity": 1,
              "transform": "translateY(0)",
            }
          }
          className="c0"
          defaultStyle={
            Object {
              "display": "none",
              "opacity": 0,
              "transform": "translateY(15px)",
            }
          }
          enterInitStyle={
            Object {
              "display": "inline-block",
              "opacity": 0,
              "transform": "translateY(15px)",
            }
          }
          enterStyle={
            Object {
              "opacity": Array [
                1,
              ],
              "transform": Array [
                "translateY(0)",
              ],
            }
          }
          leaveStyle={
            Object {
              "opacity": Array [
                0,
              ],
              "transform": Array [
                "translateY(15px)",
              ],
            }
          }
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            className="c0"
            onTransitionEnd={[Function]}
            style={
              Object {
                "display": "none",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transform": "translateY(15px)",
              }
            }
          >
            <span
              key="workaround"
              style={
                Object {
                  "opacity": 0.9,
                }
              }
            />
            <PopoverContent
              innerRef={[Function]}
              key=".0"
            >
              <div
                className="c1"
              >
                <div>
                  Content
                </div>
              </div>
            </PopoverContent>
          </div>
        </CSSTransition>
      </StyledCSSTransition>
    </PopoverTransition>
  </div>
</Popover>
`;

exports[`<Popover /> with showInitially props 1`] = `
.c1 {
  display: block;
  -webkit-text-align: left;
  text-align: left;
  padding: 20px;
  box-shadow: 0 2px 40px 0;
}

@media (min-width:0px) and (max-width:568px) {
  .c0 {
    left: 0 !important;
    right: 0 !important;
  }
}

<Popover
  render={[Function]}
  showInitially={true}
>
  <div>
    <button
      aria-expanded="true"
      aria-haspopup="true"
      onClick={[Function]}
    >
      Toggle
    </button>
    <PopoverTransition
      shown={true}
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <StyledCSSTransition
        active={true}
        activeStyle={
          Object {
            "opacity": 1,
            "transform": "translateY(0)",
          }
        }
        defaultStyle={
          Object {
            "display": "none",
            "opacity": 0,
            "transform": "translateY(15px)",
          }
        }
        enterInitStyle={
          Object {
            "display": "inline-block",
            "opacity": 0,
            "transform": "translateY(15px)",
          }
        }
        enterStyle={
          Object {
            "opacity": Array [
              1,
            ],
            "transform": Array [
              "translateY(0)",
            ],
          }
        }
        leaveStyle={
          Object {
            "opacity": Array [
              0,
            ],
            "transform": Array [
              "translateY(15px)",
            ],
          }
        }
        style={
          Object {
            "left": 0,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <CSSTransition
          active={true}
          activeStyle={
            Object {
              "opacity": 1,
              "transform": "translateY(0)",
            }
          }
          className="c0"
          defaultStyle={
            Object {
              "display": "none",
              "opacity": 0,
              "transform": "translateY(15px)",
            }
          }
          enterInitStyle={
            Object {
              "display": "inline-block",
              "opacity": 0,
              "transform": "translateY(15px)",
            }
          }
          enterStyle={
            Object {
              "opacity": Array [
                1,
              ],
              "transform": Array [
                "translateY(0)",
              ],
            }
          }
          leaveStyle={
            Object {
              "opacity": Array [
                0,
              ],
              "transform": Array [
                "translateY(15px)",
              ],
            }
          }
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "top": 0,
            }
          }
        >
          <div
            className="c0"
            onTransitionEnd={[Function]}
            style={
              Object {
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transform": "translateY(0)",
              }
            }
          >
            <span
              key="workaround"
              style={
                Object {
                  "opacity": 0.9,
                }
              }
            />
            <PopoverContent
              innerRef={[Function]}
              key=".0"
            >
              <div
                className="c1"
              >
                <div>
                  Content
                </div>
              </div>
            </PopoverContent>
          </div>
        </CSSTransition>
      </StyledCSSTransition>
    </PopoverTransition>
  </div>
</Popover>
`;
